--- a/settings.gradle
+++ b/settings.gradle
@@ -30,4 +30,5 @@ rootProject.children.each {project ->
 	project.buildFileName = "${project.name}.gradle"
 }
 include 'snake-spring'
+include 'snake-spring-mvc'
 
