--- a/snake-spring-event/build.gradle
+++ b/snake-spring-event/build.gradle
@@ -10,8 +10,6 @@ repositories {
 }
 
 dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     optional(project(":spring-context"))
-    compile project(":spring-webmvc")
-    provided(group: 'javax.servlet',name: 'java.servlet-api',version: '4.0.1')
-    compile("org.apache.tomcat.embed:tomcat-embed-core:8.5.33")
 }
